--- a/vignettes/demo.Rmd
+++ b/vignettes/demo.Rmd
@@ -25,7 +25,7 @@ library(testthat)
 List all BEAST2 packages:
 
 ```{r}
-beast2_packages <- list_beast2_packages() 
+beast2_packages <- mrc_list() 
 knitr::kable(head(beast2_packages))
 ```
 
@@ -38,34 +38,40 @@ first_absent_package_name <- beast2_packages[
 print(first_absent_package_name)
 ```
 
+Check that is indeed not installed:
+
+```{r}
+testthat::expect_false(mrc_is_installed(first_absent_package_name))
+```
+
 Install that package:
 
 ```{r}
-install_beast2_package(first_absent_package_name)
+# mrc_install(first_absent_package_name)
 ```
 
 Should not be the first absent package anymore:
 
 ```{r}
-beast2_packages <- list_beast2_packages() 
-new_first_absent_package_name <- beast2_packages[ 
-  beast2_packages$installed_version == "NA", 
-]$name[1]
-expect_true(new_first_absent_package_name != first_absent_package_name)
+# beast2_packages <- mrc_list() 
+# new_first_absent_package_name <- beast2_packages[ 
+#   beast2_packages$installed_version == "NA", 
+# ]$name[1]
+# expect_true(new_first_absent_package_name != first_absent_package_name)
 ```
 
 Uninstall that package:
 
 ```{r}
-uninstall_beast2_package(first_absent_package_name)
+# unmrc_install(first_absent_package_name)
 ```
 
 Should be the first absent package again:
 
 ```{r}
-beast2_packages <- list_beast2_packages() 
-last_first_absent_package_name <- beast2_packages[ 
-  beast2_packages$installed_version == "NA", 
-]$name[1]
-expect_true(last_first_absent_package_name == first_absent_package_name)
+# beast2_packages <- mrc_list() 
+# last_first_absent_package_name <- beast2_packages[ 
+#   beast2_packages$installed_version == "NA", 
+# ]$name[1]
+# expect_true(last_first_absent_package_name == first_absent_package_name)
 ```
