Can install and uninstall

--- a/vignettes/demo.Rmd
+++ b/vignettes/demo.Rmd
@@ -47,31 +47,31 @@ testthat::expect_false(mrc_is_installed(first_absent_package_name))
 Install that package:
 
 ```{r}
-# mrc_install(first_absent_package_name)
+mrc_install(first_absent_package_name)
 ```
 
 Should not be the first absent package anymore:
 
 ```{r}
-# beast2_packages <- mrc_list() 
-# new_first_absent_package_name <- beast2_packages[ 
-#   beast2_packages$installed_version == "NA", 
-# ]$name[1]
-# expect_true(new_first_absent_package_name != first_absent_package_name)
+beast2_packages <- mrc_list() 
+new_first_absent_package_name <- beast2_packages[ 
+ beast2_packages$installed_version == "NA", 
+]$name[1]
+expect_true(new_first_absent_package_name != first_absent_package_name)
 ```
 
 Uninstall that package:
 
 ```{r}
-# unmrc_install(first_absent_package_name)
+mrc_uninstall(first_absent_package_name)
 ```
 
 Should be the first absent package again:
 
 ```{r}
-# beast2_packages <- mrc_list() 
-# last_first_absent_package_name <- beast2_packages[ 
-#   beast2_packages$installed_version == "NA", 
-# ]$name[1]
-# expect_true(last_first_absent_package_name == first_absent_package_name)
+beast2_packages <- mrc_list() 
+last_first_absent_package_name <- beast2_packages[ 
+ beast2_packages$installed_version == "NA", 
+]$name[1]
+expect_true(last_first_absent_package_name == first_absent_package_name)
 ```
