--- a/vignettes/demo.Rmd
+++ b/vignettes/demo.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "mauricer demo"
-author: "Richel J.C. Bilderbeek"
+author: "Richèl J.C. Bilderbeek"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
