--- a/vignettes/demo.Rmd
+++ b/vignettes/demo.Rmd
@@ -22,10 +22,16 @@ library(mauricer)
 library(testthat)
 ```
 
+```{r}
+if (!has_internet()) {
+  print("No internet connection")
+}
+```
+
 List all BEAST2 packages:
 
 ```{r}
-if (beastier::is_beast2_installed()) {
+if (has_internet() && beastier::is_beast2_installed()) {
   beast2_packages <- get_beast2_pkg_names() 
   knitr::kable(head(beast2_packages))
 }
@@ -34,7 +40,7 @@ if (beastier::is_beast2_installed()) {
 Find a package that is not installed:
 
 ```{r}
-if (beastier::is_beast2_installed()) {
+if (has_internet() && beastier::is_beast2_installed()) {
   first_absent_package_name <- beast2_packages[ 
     beast2_packages$installed_version == "NA", 
   ]$name[1]
@@ -45,7 +51,7 @@ if (beastier::is_beast2_installed()) {
 Check that is indeed not installed:
 
 ```{r}
-if (beastier::is_beast2_installed()) {
+if (has_internet() && beastier::is_beast2_installed()) {
   expect_false(is_beast2_pkg_installed(first_absent_package_name))
 }
 ```
@@ -53,7 +59,7 @@ if (beastier::is_beast2_installed()) {
 Install that package:
 
 ```{r}
-if (beastier::is_beast2_installed()) {
+if (has_internet() && beastier::is_beast2_installed()) {
   install_beast2_pkg(first_absent_package_name)
 }
 ```
@@ -61,7 +67,7 @@ if (beastier::is_beast2_installed()) {
 Should not be the first absent package anymore:
 
 ```{r}
-if (beastier::is_beast2_installed()) {
+if (has_internet() && beastier::is_beast2_installed()) {
   beast2_packages <- get_beast2_pkg_names() 
   new_first_absent_package_name <- beast2_packages[ 
    beast2_packages$installed_version == "NA", 
@@ -73,7 +79,7 @@ if (beastier::is_beast2_installed()) {
 Uninstall that package:
 
 ```{r}
-if (beastier::is_beast2_installed()) {
+if (has_internet() && beastier::is_beast2_installed()) {
   uninstall_beast2_pkg(first_absent_package_name)
 }
 ```
@@ -81,7 +87,7 @@ if (beastier::is_beast2_installed()) {
 Should be the first absent package again:
 
 ```{r}
-if (beastier::is_beast2_installed()) {
+if (has_internet() && beastier::is_beast2_installed()) {
   beast2_packages <- get_beast2_pkg_names() 
   last_first_absent_package_name <- beast2_packages[ 
    beast2_packages$installed_version == "NA", 
