--- a/vignettes/demo.Rmd
+++ b/vignettes/demo.Rmd
@@ -23,7 +23,7 @@ library(testthat)
 ```
 
 ```{r}
-if (!has_internet()) {
+if (!curl::has_internet()) {
   print("No internet connection")
 }
 ```
@@ -31,7 +31,7 @@ if (!has_internet()) {
 List all BEAST2 packages:
 
 ```{r}
-if (has_internet() && beastier::is_beast2_installed()) {
+if (curl::has_internet() && beastier::is_beast2_installed()) {
   beast2_packages <- get_beast2_pkg_names() 
   knitr::kable(head(beast2_packages))
 }
@@ -40,7 +40,7 @@ if (has_internet() && beastier::is_beast2_installed()) {
 Find a package that is not installed:
 
 ```{r}
-if (has_internet() && beastier::is_beast2_installed()) {
+if (curl::has_internet() && beastier::is_beast2_installed()) {
   first_absent_package_name <- beast2_packages[ 
     beast2_packages$installed_version == "NA", 
   ]$name[1]
@@ -51,7 +51,7 @@ if (has_internet() && beastier::is_beast2_installed()) {
 Check that is indeed not installed:
 
 ```{r}
-if (has_internet() && beastier::is_beast2_installed()) {
+if (curl::has_internet() && beastier::is_beast2_installed()) {
   expect_false(is_beast2_pkg_installed(first_absent_package_name))
 }
 ```
@@ -59,7 +59,7 @@ if (has_internet() && beastier::is_beast2_installed()) {
 Install that package:
 
 ```{r}
-if (has_internet() && beastier::is_beast2_installed()) {
+if (curl::has_internet() && beastier::is_beast2_installed()) {
   install_beast2_pkg(first_absent_package_name)
 }
 ```
@@ -67,7 +67,7 @@ if (has_internet() && beastier::is_beast2_installed()) {
 Should not be the first absent package anymore:
 
 ```{r}
-if (has_internet() && beastier::is_beast2_installed()) {
+if (curl::has_internet() && beastier::is_beast2_installed()) {
   beast2_packages <- get_beast2_pkg_names() 
   new_first_absent_package_name <- beast2_packages[ 
    beast2_packages$installed_version == "NA", 
@@ -79,7 +79,7 @@ if (has_internet() && beastier::is_beast2_installed()) {
 Uninstall that package:
 
 ```{r}
-if (has_internet() && beastier::is_beast2_installed()) {
+if (curl::has_internet() && beastier::is_beast2_installed()) {
   uninstall_beast2_pkg(first_absent_package_name)
 }
 ```
@@ -87,7 +87,7 @@ if (has_internet() && beastier::is_beast2_installed()) {
 Should be the first absent package again:
 
 ```{r}
-if (has_internet() && beastier::is_beast2_installed()) {
+if (curl::has_internet() && beastier::is_beast2_installed()) {
   beast2_packages <- get_beast2_pkg_names() 
   last_first_absent_package_name <- beast2_packages[ 
    beast2_packages$installed_version == "NA", 
