--- a/vignettes/demo.Rmd
+++ b/vignettes/demo.Rmd
@@ -16,19 +16,45 @@ knitr::opts_chunk$set(
 )
 ```
 
+## Introduction
+
+`mauricer` is an R package to handle BEAST2 package management from R.
+
+In this vignette, we will:
+
+ * List all BEAST2 packages
+ * Install the first non-installed BEAST2 package 
+ * Verify the BEAST2 package is indeed installed
+ * Uninstall the BEAST2 package
+ 
+To do so, we'll need to load `mauricer`. We'll also load `testthat` for testing:
 
 ```{r}
 library(mauricer)
 library(testthat)
 ```
 
+To install BEAST2 packages, one needs 
+
+ * an internet connection
+ * BEAST2 must be installed
+ 
+If there is no internet connection, or if BEAST2 is not installed, 
+this vignette will be close to empty.
+
 ```{r}
 if (!curl::has_internet()) {
   print("No internet connection")
 }
+if (!beastier::is_beast2_installed()) {
+  print("No BEAST2 installed")
+}
 ```
 
-List all BEAST2 packages:
+## List all BEAST2 packages
+
+Use `get_beast2_pkg_names` to get a data frame with the name,
+version and install status of all BEAST2 packages:
 
 ```{r}
 if (curl::has_internet() && beastier::is_beast2_installed()) {
@@ -37,22 +63,16 @@ if (curl::has_internet() && beastier::is_beast2_installed()) {
 }
 ```
 
+## Install the first non-installed BEAST2 package
+
 Find a package that is not installed:
 
 ```{r}
 if (curl::has_internet() && beastier::is_beast2_installed()) {
-  first_absent_package_name <- beast2_packages[ 
+  package_name <- beast2_packages[ 
     beast2_packages$installed_version == "NA", 
   ]$name[1]
-  print(first_absent_package_name)
-}
-```
-
-Check that is indeed not installed:
-
-```{r}
-if (curl::has_internet() && beastier::is_beast2_installed()) {
-  expect_false(is_beast2_pkg_installed(first_absent_package_name))
+  print(package_name)
 }
 ```
 
@@ -60,38 +80,26 @@ Install that package:
 
 ```{r}
 if (curl::has_internet() && beastier::is_beast2_installed()) {
-  install_beast2_pkg(first_absent_package_name)
+  install_beast2_pkg(package_name)
 }
 ```
 
-Should not be the first absent package anymore:
+## Verify the BEAST2 package is indeed installed
+
+Use `is_beast2_pkg_installed`:
 
 ```{r}
 if (curl::has_internet() && beastier::is_beast2_installed()) {
-  beast2_packages <- get_beast2_pkg_names() 
-  new_first_absent_package_name <- beast2_packages[ 
-   beast2_packages$installed_version == "NA", 
-  ]$name[1]
-  expect_true(new_first_absent_package_name != first_absent_package_name)
+  expect_true(is_beast2_pkg_installed(package_name))
 }
 ```
 
-Uninstall that package:
+## Uninstall the BEAST2 package
+
+Use `uninstall_beast2_pkg`:
 
 ```{r}
 if (curl::has_internet() && beastier::is_beast2_installed()) {
-  uninstall_beast2_pkg(first_absent_package_name)
-}
-```
-
-Should be the first absent package again:
-
-```{r}
-if (curl::has_internet() && beastier::is_beast2_installed()) {
-  beast2_packages <- get_beast2_pkg_names() 
-  last_first_absent_package_name <- beast2_packages[ 
-   beast2_packages$installed_version == "NA", 
-  ]$name[1]
-  expect_equal(last_first_absent_package_name, first_absent_package_name)
+  uninstall_beast2_pkg(package_name)
 }
 ```
